Fri Feb  2 12:02:23 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c Makefile.am: Use $(libdir), not $(exe_prefix),
	since some people set $(libdir) separately. (#1290, David Kaelbling)

Thu Feb  1 20:32:49 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c: Improve warnings a bit in a fashion similar
	to the part of gtk-enf-990513-0.patch (Eric Fisher) that hasn't
	been superceded.

Thu Feb  1 18:25:46 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c: If PATH_MAX and MAXPATHLEN are not
	defined, define MAXPATHLEN to 2048. (The Hurd doesn't have
	MAXPATHLEN, but the code here depends on a fixed value.)
	(#4524)

Wed Jan 31 22:01:04 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkhandlebox.c (gtk_handle_box_draw): Remove a dependency
	on bin->child != NULL. (Basically, just a cleanup)

	* gtk/gtkhandlebox.c (gtk_handle_box_button_changed): Handle the case
	where child == NULL and handle_position == RIGHT or BOTTOM. (#8041)

Wed Jan 31 21:20:39 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkctree.c (real_tree_move): If the node being moved isn't
	viewable there is no way that moving the node will cause the 
	focus row to become not viewable, so omit check on the visibility
	of new_sibling, which is irrelevant. (Fixes #8002, David Helder)

Wed Jan 31 20:33:35 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_set_selection): Check bounds
	when setting selection. (#7302)

Thu Feb  1 02:26:18 2001  Tim Janik  <timj@gtk.org>

	* gtk/Makefile.am ($(srcdir)/gtkmarshal.c): avoid regeneration
	of gtkmarshal.c from stamp file dep, when not @REBUILD@,
	fixes #11008.

Wed Jan 31 19:23:01 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfontsel.c (gtk_font_selection_set_font_name): 
	Apply patch gtk-gharris-000907-0.patch (Guy Harris) fixing problem where 
	wrong row was selected when filters filtered out some fonts.

Wed Jan 31 18:49:33 2001  Owen Taylor  <otaylor@redhat.com>
