@@ -1,3 +1,9 @@
+Fri Feb  2 13:20:12 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkmain.c (gtk_propagate_event): When a grab
+	widget is in effect, give the grab widget a first
+	crack at KEY_PRESS/RELEASE events. (#424)
+
 Fri Feb  2 12:02:23 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkrc.c Makefile.am: Use $(libdir), not $(exe_prefix),
