@@ -1292,13 +1292,27 @@ gtk_propagate_event (GtkWidget *widget,
       GtkWidget *window;
 
       window = gtk_widget_get_ancestor (widget, GTK_TYPE_WINDOW);
-      if (window)
-        {
-	  if (GTK_WIDGET_IS_SENSITIVE (window))
-	    gtk_widget_event (window, event);
 
-          handled_event = TRUE; /* don't send to widget */
-        }
+      /* If there is a grab within the window, give the grab widget
+       * a first crack at the key event
+       */
+      if (widget != window && GTK_WIDGET_HAS_GRAB (widget))
+	{
+	  gtk_widget_ref (widget);
+	  handled_event = gtk_widget_event (widget, event);
+	  gtk_widget_unref (widget);
+	}
+
+      if (!handled_event)
+	{
+	  if (window)
+	    {
+	      if (GTK_WIDGET_IS_SENSITIVE (window))
+		gtk_widget_event (window, event);
+	      
+	      handled_event = TRUE; /* don't send to widget */
+	    }
+	}
     }
   
   /* Other events get propagated up the widget tree
